# TP-Texture-Proc

./: #main.cpp#  .gitignore  CMakeLists.txt  EfrosLeung.cpp  EfrosLeung.h  GradientHistogram.h  KMean.h  README.md  basic4groups.csv  dataVisu.ipynb  gmm2d.csv  gmm3d.csv  main.cpp  mainEfrosLeung.cpp  mainKMean.cpp  predicted.csv  tpd.ipynb  train.csv
